listo hasta 800px

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class = "header-titulo">
             <img src="./asstes/imagenes/titulo_youtube.png" alt="">
+            <span>CO</span>
         </div>
         <div class = "header_input_vacio-mobile">
             <input type="text">
@@ -19,8 +20,9 @@
 
             </span>
         </div>
+        
         <div class="header_contenido_vacio-mobile">
-            <img src="" alt="">
+            <img class = "search" src="./asstes/iconos/search.png" alt="">
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
@@ -49,7 +51,7 @@
                 <li class = "li-cortos">Salsa</li>
             </ul>
         </div>
-        <section>
+        <section class = big_container>
             <section class = "section-inicio-videos">
                 <div class = "imagen1">
                     <div class = "interno-imagen">
@@ -67,7 +69,7 @@
                 </div>
             </section>
             <section class = "section_2do-video">
-                <div class = "imagen2">
+                <div  id = "modificador" class = "imagen2">
 
                 </div>
                 <div class = "interno-sectionVideos2">
@@ -89,14 +91,65 @@
                 </div>
                 <div class = "interno-sectionVideos3">
                     <div class = "div33">
-                        <img class = "img33" src="./" alt="">
+                        <img class = "img33" src="./asstes/imagenes/cado.jpg" alt="">
                     </div>
                     <div class = "interno_videos3-1">
-                        <p><b>CSS Grid vs Flexbox - Cuando usar uno u otro.</b></p>
-                        <p class = "p3">FalconMasters - 22 K vistas - hace 1 semana </p>
+                        <p><b>Con ánimo de ofender : Cap # 116 - Harry no sabe contar</b></p>
+                        <p class = "p3">CADO - 88 K vistas - hace 4 horas </p>
                     </div>
                     <div class = "ultimo2">
                         <img class = "puntos2" src="./asstes/iconos/menu.svg" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class = "section_4do-video">
+                <div class = "imagen4">
+
+                </div>
+                <div class = "interno-sectionVideos4">
+                    <div class = "div44">
+                        <img class = "img44" src="./asstes/imagenes/jon.jpg" alt="">
+                    </div>
+                    <div class = "interno_videos4-1">
+                        <p><b>Curso de Javascript 32. Funciones Anónimas Autoejecutables</b></p>
+                        <p class = "p4">Jonmircha - 50 K vistas - hace 1 año </p>
+                    </div>
+                    <div class = "ultimo4">
+                        <img class = "puntos4" src="./asstes/iconos/menu.svg" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class = "section_5do-video">
+                <div class = "imagen5">
+
+                </div>
+                <div class = "interno-sectionVideos5">
+                    <div class = "div55">
+                        <img class = "img55" src="./asstes/imagenes/party.jpg" alt="">
+                    </div>
+                    <div class = "interno_videos5-1">
+                        <p><b>Mix para escuchar en tod lado</b></p>
+                        <p class = "p5">Dj Ricarfo Muñoz - 400 K vistas - hace 4 años </p>
+                    </div>
+                    <div class = "ultimo5">
+                        <img class = "puntos5" src="./asstes/iconos/menu.svg" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class = "section_6do-video">
+                <div class = "imagen6">
+
+                </div>
+                <div class = "interno-sectionVideos6">
+                    <div class = "div66">
+                        <img class = "img66" src="./asstes/imagenes/refelxiva.jpg" alt="">
+                    </div>
+                    <div class = "interno_videos6-1">
+                        <p><b>¿Como nunca enojarse con nadie? | Sadhguru</b></p>
+                        <p class = "p6">Sadhguru Español - 6.3 M de vistas - hace 2 años </p>
+                    </div>
+                    <div class = "ultimo6">
+                        <img class = "puntos6" src="./asstes/iconos/menu.svg" alt="">
                     </div>
                 </div>
             </section>
