estructura lista, ambiente visual por mejorar

--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
         </div>
         
         <div class="header_contenido_vacio-mobile">
-            <img class = "search" src="./asstes/iconos/search.png" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <input type="text" id="texto_header" placeholder = "Buscar">
+            <span>
+            <img class = "search" src="./asstes/iconos/search.png" alt=""></span>
+        </div>
+        <div class="header_iconos-pc">
+            <div class="containers2">
+            <img class = "s2" src="./asstes/iconos/microfono.png" alt="">
+        </div>
+        <div class="containers3">
+            <img class = "s3" src="./asstes/iconos/camera.png" alt="">
+        </div>
+        <div class="containers4">
+            <img class = "s4" src="./asstes/iconos/campana.png" alt="">
+        </div>
         </div>
         <div class = "header-gmail">
             <img src="./asstes/imagenes/gmail.png" alt="">
@@ -49,8 +59,31 @@
                 <li class = "li-cortos">Música</li>
                 <li class = "li-cortos">Santos</li>
                 <li class = "li-cortos">Salsa</li>
+                <li class = "li-cortos">Notas</li>
+                <li class = "li-cortos">Casas</li>
+                <li class = "li-cortos">Caidas</li>
+                <li class = "li-cortos">CADO</li>
             </ul>
         </div>
+        <section class="main_father-big_container">
+            <section class = "main_father_interno1">
+                <div class = "div_interno1">
+                    <img src="./asstes/iconos/home.svg" alt="">
+                    <p>Principal</p>
+                </div>
+                <div class = "div_interno1">
+                    <img src="./asstes/iconos/explorar.svg" alt="">
+                    <p>Explorar</p>
+                </div>
+                <div class = "div_interno1">
+                    <img src="./asstes/iconos/suscripciones.svg" alt="">
+                    <p>Suscripciones</p>
+                </div>
+                <div class = "div_interno1">
+                    <img src="./asstes/biblioteca.svg" alt="">
+                    <p>Biblioteca</p>
+                </div>
+            </section>
         <section class = big_container>
             <section class = "section-inicio-videos">
                 <div class = "imagen1">
@@ -154,6 +187,7 @@
                 </div>
             </section>
         </section>
+    </section>
     </main>
 
 
