--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel= "icon" href="./asstes/iconos/icono_web.png" >
-    <title>Youtube</title>
+    <title>2.0 Youtube</title>
 </head>
 <body>
     <header>
